examples/test/testpolicy12635.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12635
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key40: value28
      key42: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value44
          key32: value40
      podSelector:
        matchLabels:
          key14: value0
          key16: value18
